--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "cross-env TAILWIND_MODE=watch vite",
     "build": "cross-env TAILWIND_MODE=build vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "git-cz": "git-cz"
   },
   "devDependencies": {
     "prettier": "^2.5.1",
@@ -12,7 +13,8 @@
     "vite": "^2.4.4"
   },
   "dependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "git-cz": "^4.9.0"
   },
   "name": "zao-coffee-menu"
 }
